Persistence tweaks: inserts to direct columns; custom select statement (@Loader) (or) load query only fields declared; Tools: getAnnotatedValues; Documentations